<resources>
    <string name="app_name">Bo.Tix</string>
    <string name="ok">OK</string>
    <string name="inside_out">Inside Out</string>
    <string name="SU">Rating : SU</string>
    <string name="D">Rating : D 17+</string>
    <string name="mb">My Boo</string>
    <string name="BB">Bad Boy</string>
    <string name="buy">Check Film</string>
    <string name="g">The Garfield</string>
    <string name="grand">How to Make Millions Before Grandma Dies</string>
    <string name="sinopsis">Sinopsis : </string>
    <string name="sinopsis1">Dalam film pertama Inside Out, Riley Andersen (Kensington Tallman) tumbuh dengan berbagai macam emosi yang diwujudkan dalam bentuk karakter. Sosok karakter itu adalah Joy, Sadness, Fear, Anger, dan Disgust.
Kini, kisah Riley dalam Inside Out 2 diawali dengan dirinya yang beranjak remaja dan memasuki masa pubertas. Situasi itu mendatangkan para pekerja untuk membongkar ruang pengendali emosi dan menambahkan berbagai tombol emosi baru.
Karakter emosi baru itu terdiri dari Anxiety (Maya Hawke), Envy (Ayo Edebiri), Ennui (Adele Exarchopoulos), dan Embarrassment (Paul Walter Hauser). Kemunculan emosi baru itu mengejutkan kelompok emosi Riley yang sebelumnya.
    </string>
    <string name="sinopsis2">Seorang gamer muda bernama "Joe" mendapat warisan sebuah rumah yang berhantu. Tidak hanya rumah, ada juga hantu penghuni yang tidak beranjak pergi. Mulanya Joe ingin mengusir hantu-hantu tersebut, tapi tidak mau pergi juga. Maka mereka menyepakati untuk menjalankan wahana rumah berhantu untuk mendapatkan uang.
        Berhasil menjalankan rumah hantu dan menarik pengunjung, ternyata Joe terpikat dengan salah satu hantu. Namanya Anong, mereka merasa cocok walaupun ada perbedaan dunia. Tantangan dan masalah mulai bermunculan antara Joe dan Anong sebab perbedaan alam. Maka Joe juga belajar tentang dunia per-hantuan, sedangkan para hantu belajar kehidupan manusia saat ini.
    </string>
    <string name="sinopsis3">Letnan Detektif Michael Eugene Lowery alias Mike (Will Smith) dan Letnan Detektif Marcus Miles Burnett (Martin Lawrence) adalah dua anggota polisi yang bertugas sebagai detektif di kepolisian Miami, Los Angeles.
Mereka tak hanya menjadi detektif yang kerap bekerja sama, tetapi juga begitu akrab bagai saudara. Hal itu menjadikan Mike dan Marcus sering menghabiskan waktu bersama baik saat mendapat misi maupun tidak.
Suatu hari, Mike dan Marcus mendapati atasan mereka, mendiang Kapten Conrad Howard (Joe Pantoliano), terjerat tuduhan kasus setelah meninggal dunia.
    </string>
    <string name="sinopsis4">Setelah pertemuan tak terduga Garfield (Chris Pratt) dengan ayahnya Vic (Samuel L. Jackson) - Dia dan teman anjingnya Odie terpaksa meninggalkan kehidupan mereka yang nyaman untuk memulai petualangan bersama.Setelah pertemuan tak terduga Garfield (Chris Pratt) dengan ayahnya Vic (Samuel L. Jackson) - Dia dan teman anjingnya Odie terpaksa meninggalkan kehidupan mereka yang nyaman untuk memulai petualangan bersama.
    </string>
    <string name="sinopsis5">Seorang pria berhenti bekerja untuk merawat neneknya yang sedang sekarat, termotivasi oleh kekayaannya. Dia merencanakan untuk memenangkan hati neneknya sebelum neneknya meninggal.
    </string>


</resources>