<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bone"
    android:fillViewport="true"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <!-- Tambahkan LinearLayout untuk header title -->
        <LinearLayout
            android:id="@+id/header_title"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:paddingStart="28dp"
            android:paddingEnd="16dp">

            <TextView
                android:id="@+id/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hello,"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="user!!!"
                android:textColor="@color/black"
                android:textSize="24sp" />

        </LinearLayout>

        <!-- Tambahkan ImageButton di sebelah kanan atas -->
        <ImageButton
            android:id="@+id/topRightButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="16dp"
            android:background="@null"
            android:contentDescription="Menu"
            android:src="@drawable/profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- SearchView -->
        <SearchView
            android:id="@+id/searchView"
            android:layout_width="275dp"
            android:layout_height="52dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="80dp"
            android:background="@drawable/custom_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.222"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_title" />

        <Button
            android:id="@+id/button"
            android:layout_width="67dp"
            android:layout_height="50dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="28dp"
            android:backgroundTint="@color/grey"
            android:text="@string/ok"
            android:textColor="@color/black"
            app:cornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_title" />

        <!-- Gambar pertama -->
        <LinearLayout
            android:id="@+id/layout_gambar_pertama"
            android:layout_width="0dp"
            android:layout_height="210dp"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toBottomOf="@id/searchView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                android:id="@+id/imageFilterButton1"
                android:layout_width="175dp"
                android:layout_height="match_parent"
                android:background="@color/bone"
                android:scaleType="fitCenter"
                android:contentDescription="@string/SU"
                app:srcCompat="@drawable/inside_out" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:text="@string/inside_out"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginTop="2dp"
                    android:gravity="center"
                    android:text="@string/SU"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:onClick="launchSettingsFilm1"
                    android:text="@string/buy" />

            </LinearLayout>

        </LinearLayout>

        <!-- Gambar kedua -->
        <LinearLayout
            android:id="@+id/layout_gambar_kedua"
            android:layout_width="0dp"
            android:layout_height="210dp"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toBottomOf="@id/layout_gambar_pertama"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                android:id="@+id/imageFilterButton2"
                android:layout_width="175dp"
                android:layout_height="match_parent"
                android:background="@color/bone"
                android:scaleType="fitCenter"
                android:contentDescription="@string/D"
                app:srcCompat="@drawable/myboo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:text="@string/mb"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginTop="2dp"
                    android:gravity="center"
                    android:text="@string/D"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:onClick="launchSettingsFilm2"
                    android:text="@string/buy" />

            </LinearLayout>

        </LinearLayout>

        <!-- Gambar ketiga -->
        <LinearLayout
            android:id="@+id/layout_gambar_ketiga"
            android:layout_width="0dp"
            android:layout_height="210dp"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toBottomOf="@id/layout_gambar_kedua"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                android:id="@+id/imageFilterButton3"
                android:layout_width="175dp"
                android:layout_height="match_parent"
                android:background="@color/bone"
                android:scaleType="fitCenter"
                android:contentDescription="@string/D"
                app:srcCompat="@drawable/bad_boy" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:gravity="center"
                    android:layout_marginTop="30dp"
                    android:text="@string/BB"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:gravity="center"
                    android:text="@string/D"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:onClick="launchSettingsFilm3"
                    android:text="@string/buy" />

            </LinearLayout>

        </LinearLayout>

        <!-- Gambar keempat -->
        <LinearLayout
            android:id="@+id/layout_gambar_keempat"
            android:layout_width="0dp"
            android:layout_height="210dp"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toBottomOf="@id/layout_gambar_ketiga"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                android:id="@+id/imageFilterButton4"
                android:layout_width="175dp"
                android:layout_height="match_parent"
                android:background="@color/bone"
                android:contentDescription="@string/D"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/garfield" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:gravity="center"
                    android:layout_marginTop="30dp"
                    android:text="@string/g"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:gravity="center"
                    android:text="@string/SU"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/button9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:onClick="launchSettingsFilm4"
                    android:text="@string/buy" />

            </LinearLayout>

        </LinearLayout>

        <!-- Gambar kelima -->
        <LinearLayout
            android:id="@+id/layout_gambar_kelima"
            android:layout_width="0dp"
            android:layout_height="210dp"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toBottomOf="@id/layout_gambar_keempat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                android:id="@+id/imageFilterButton5"
                android:layout_width="175dp"
                android:layout_height="match_parent"
                android:background="@color/bone"
                android:contentDescription="@string/D"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/grandma" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/grand"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:gravity="center"
                    android:text="@string/SU"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/button10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:onClick="launchSettingsFilm5"
                    android:text="@string/buy" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
